work/yaml/gitlab_latest/gitlab(1).yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitlab-gitlab-ce
  namespace: gitlab
  labels:
    app: gitlab-gitlab-ce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-gitlab-ce
  template:
    metadata:
      labels:
        app: gitlab-gitlab-ce
    spec:
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-data
        - name: gitlab-tls
          secret:
            secretName: gitlab-tls-pem
            defaultMode: 420
      containers:
        - name: gitlab-gitlab-ce
          image: 'reg.k8s.rf.io/gitlab/gitlab-ce:13.6.0'
          ports:
            - name: ssh
              containerPort: 22
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: gitlab-tls
              mountPath: /etc/gitlab/ssl
            - name: gitlab-data
              mountPath: /var/opt/gitlab
          livenessProbe:
            httpGet:
              path: /help
              port: http
              scheme: HTTP
            initialDelaySeconds: 200
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /help
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 2147483647
  progressDeadlineSeconds: 2147483647
